--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 plugins {
+    id 'org.jetbrains.kotlin.plugin.jpa' version '1.3.21'
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.springframework.boot' version '2.1.4.RELEASE'
+    id 'org.jetbrains.kotlin.plugin.spring' version '1.3.21'
 }
 
+apply plugin: 'groovy'
+apply plugin: 'io.spring.dependency-management'
 group 'com.myapps.publictransport'
 version '1.0-SNAPSHOT'
 
@@ -10,8 +15,21 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
+    implementation 'org.jetbrains.kotlin:kotlin-reflect'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'com.h2database:h2:1.4.193'
+    testCompile "org.spockframework:spock-core:1.2-groovy-2.4"
+    testCompile "com.blogspot.toomuchcoding:spock-subjects-collaborators-extension:1.2.2"
+    testCompile "org.codehaus.groovy:groovy-all:2.4.13"
+    testCompile 'io.rest-assured:spring-mock-mvc'
+    testCompile 'cglib:cglib-nodep:3.2.5'
+    testCompile 'org.spockframework:spock-spring:1.1-groovy-2.4'
 }
+
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
