--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
-spring.h2.console.path=/publictransport
+#spring.h2.console.path=/publictransport
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+local.server.port=8080
+spring.application.name=publictransport
+spring.profiles.active=test
